@@ -367,7 +367,7 @@ It is also possible to convert the values of a \verb@RasterLayer@ to points or p
 
 \section{Summarizing functions}
 
-When used with a \verb@Raster*@ object as first argument, normal summary statistics functions such as min, max and mean return a RasterLayer. You can use cellStats if, instead, you want to obtain a summary for all cells of a single \verb@Raster*@ object. You can use {\bf freq} to make a frequency table, or {\bf count} to count the number of cells with a specified value. Use {\bf zonal} to summarize a \verb@Raster*@ object using zones (areas with the same integer number) defined in a \verb@RasterLayer@ and {\bf crosstab} to cross-tabulate two \verb@RasterLayer@ objects.
+When used with a \verb@Raster*@ object as first argument, normal summary statistics functions such as min, max and mean return a RasterLayer. You can use cellStats if, instead, you want to obtain a summary for all cells of a single \verb@Raster*@ object. You can use {\bf freq} to make a frequency table, or to count the number of cells with a specified value. Use {\bf zonal} to summarize a \verb@Raster*@ object using zones (areas with the same integer number) defined in a \verb@RasterLayer@ and {\bf crosstab} to cross-tabulate two \verb@RasterLayer@ objects.
 
 <<raster-10>>=
 r <- raster(ncol=36, nrow=18)
@@ -377,7 +377,7 @@ s = r
 s[] <- round(runif(ncell(r)) * 5)
 zonal(r, s, 'mean')
 freq(s)
-count(s, 3)
+freq(s, value=3)
 crosstab(r*3, s)
 @
 
